Fixed review button, buy button and expiration notify dialog.

--- a/DjvuApp/Pages/MainPage.xaml
+++ b/DjvuApp/Pages/MainPage.xaml
@@ -164,6 +164,7 @@
                 <AppBarButton
                     x:Uid="MainPage_BuyAppBarButton"
                     x:Name="buyAppBarButton"
+                    Visibility="Collapsed"
                     Label="buy application"
                     Click="BuyButtonClickHandler"/>
                 <AppBarButton
