Implemented opening of last opened page, little code refactoring.

--- a/DjvuApp/Pages/MainPage.xaml
+++ b/DjvuApp/Pages/MainPage.xaml
@@ -10,8 +10,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     DataContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
     d:DataContext="{d:DesignData /SampleData/MainPageSampleDataSource/MainPageSampleDataSource.xaml}"
-    x:Name="page"
-    Loaded="MainPage_OnLoaded">
+    x:Name="page">
 
     <Page.Transitions>
         <TransitionCollection>
