Fixed crashing bug. The text fields in the dialogs are autofocusing now. Fixed glitches and poor performance of the outline dialog.

--- a/DjvuApp/Controls/ReaderControl.xaml
+++ b/DjvuApp/Controls/ReaderControl.xaml
@@ -21,6 +21,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <controls:PageViewControl
+                        Margin="0,0,0,12"
                         State="{Binding}" 
                         Width="{Binding Width}"
                         Height="{Binding Height}"/>
