--- a/DjvuApp.WindowsPhone/Pages/AboutPage.xaml
+++ b/DjvuApp.WindowsPhone/Pages/AboutPage.xaml
@@ -48,7 +48,7 @@
         </Style>
     </Page.Resources>
 
-    <!--<Page.Transitions>
+    <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
                 <NavigationThemeTransition.DefaultNavigationTransitionInfo>
@@ -56,7 +56,7 @@
                 </NavigationThemeTransition.DefaultNavigationTransitionInfo>
             </NavigationThemeTransition>
         </TransitionCollection>
-    </Page.Transitions>-->
+    </Page.Transitions>
 
     <Pivot>
         <Pivot.Title>
@@ -81,11 +81,12 @@
                             <Image Source="/Assets/Logo.png" />
                         </Border>
                         <TextBlock
+                            x:Name="versionTextBlock"
                             x:Uid="AboutPage_AboutSection_Version"
                             Grid.Column="1"
                             Margin="20,0,0,0"
                             Style="{StaticResource BodyTextBlockStyle}">
-                            Version 1.0
+                            Version 2.0.0.0
                             <LineBreak />By Useless guy
                             <LineBreak />From Russia with love :)
                         </TextBlock>
