--- a/DjvuApp.WindowsPhone/Controls/ReaderControl.xaml
+++ b/DjvuApp.WindowsPhone/Controls/ReaderControl.xaml
@@ -8,7 +8,8 @@
     xmlns:controls="using:DjvuApp.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    SizeChanged="SizeChangedHandler">
     
     <Grid>
         <ListView 
