--- a/DjvuApp.Universal/App.xaml
+++ b/DjvuApp.Universal/App.xaml
@@ -49,6 +49,7 @@
                                     MinHeight="{TemplateBinding MinHeight}" >
                                     <Grid x:Name="DialogSpace" VerticalAlignment="Stretch">
                                         <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
                                             <RowDefinition Height="*" />
                                             <RowDefinition Height="Auto" />
                                         </Grid.RowDefinitions>
