--- a/DjvuApp.Universal/Controls/ReaderControl.xaml
+++ b/DjvuApp.Universal/Controls/ReaderControl.xaml
@@ -17,17 +17,11 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.HorizontalScrollMode="Enabled"
             ScrollViewer.ZoomMode="Enabled"
-            ScrollViewer.IsZoomInertiaEnabled="False"
-            Padding="0">
-            <ListView.ItemContainerTransitions>
-                <TransitionCollection>
-                    <EntranceThemeTransition/>
-                </TransitionCollection>
-            </ListView.ItemContainerTransitions>
+            ScrollViewer.IsZoomInertiaEnabled="False">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="controls:PageViewControlState">
                     <controls:PageViewControl
-                        Margin="0,0,0,12"
+                        Margin="0,0,0,10"
                         State="{x:Bind}" 
                         Width="{x:Bind Width}"
                         Height="{x:Bind Height}"/>
